<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8DCD1">


    <EditText
        android:id="@+id/NumToWin"
        android:layout_width="252dp"
        android:layout_height="81dp"
        android:ems="5"
        android:gravity="center"
        android:hint="@string/enter_whole_number_here"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="172dp"
        android:layout_height="68dp"
        android:text="@string/game_setup"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="241dp"
        android:layout_height="53dp"
        android:text="@string/what_number_do_you_want_to_play_to"
        android:textSize="15sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/NumToWin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <EditText
        android:id="@+id/NameToGoBy"
        android:layout_width="252dp"
        android:layout_height="81dp"
        android:ems="5"
        android:gravity="center"
        android:hint="@string/type_here"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="241dp"
        android:layout_height="53dp"
        android:text="@string/player_name"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533" />

    <Button
        android:id="@+id/button4"
        android:layout_width="171dp"
        android:layout_height="84dp"
        android:text="@string/begin"
        android:backgroundTint="#DCE2C8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:onClick="changeToGameScreen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.871" />

</androidx.constraintlayout.widget.ConstraintLayout>