<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8DCD1">

    <TextView
        android:id="@+id/winText"
        android:layout_width="271dp"
        android:layout_height="221dp"
        android:text="@string/placeholder"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/playAgainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="325dp"
        android:onClick="newGame"
        android:layout_height="83dp"
        android:backgroundTint="#DCE2C8"
        android:text="@string/play_again"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="325dp"
        android:layout_height="83dp"
        android:backgroundTint="#DCE2C8"
        android:text="@string/quit"
        android:textColor="@color/black"
        android:onClick="quitGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />
</androidx.constraintlayout.widget.ConstraintLayout>