<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8DCD1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="219dp"
        android:layout_height="77dp"
        android:text="@string/welcome_to_pig_dice"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <Button
        android:id="@+id/button"
        android:backgroundTint="#DCE2C8"
        android:layout_width="232dp"
        android:layout_height="248dp"
        android:textColor="@color/black"
        android:text="@string/start_game"
        android:onClick="startGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />

    <Button
        android:id="@+id/button2"
        android:layout_width="155dp"
        android:layout_height="113dp"
        android:textColor="@color/black"
        android:text="@string/about_pig_dice"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="#DCE2C8"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="DisplayInstructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.762" />

</androidx.constraintlayout.widget.ConstraintLayout>