<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#A8DCD1"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="230dp"
        android:layout_height="79dp"
        android:text="@string/about_pig_dice"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        tools:layout_editor_absoluteY="68dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="338dp"
        android:layout_height="521dp"
        android:text="@string/instructions"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819" />

    <Button
        android:id="@+id/button3"
        android:layout_width="106dp"
        android:layout_height="68dp"
        android:backgroundTint="#DCE2C8"
        android:onClick="returnToHomePage"
        android:text="@string/back_to_home_page"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />


</androidx.constraintlayout.widget.ConstraintLayout>