<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8DCD1">

    <TextView
        android:id="@+id/displayComputerName"
        android:layout_width="113dp"
        android:layout_height="123dp"
        android:textColor="@color/black"
        android:text="@string/banker"
        android:textSize="22sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/TargetScore"
        android:textColor="@color/black"
        android:layout_width="124dp"
        android:layout_height="117dp"
        android:text="@string/placeholder"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/RoundInfo"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:text="@string/placeholder"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/TargetScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <TextView
        android:id="@+id/displayPlayerName"
        android:layout_width="113dp"
        android:textColor="@color/black"
        android:layout_height="123dp"
        android:text="@string/placeholder"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/RoundPoints"
        android:layout_width="120dp"
        android:layout_height="101dp"
        android:text="@string/placeholder"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

    <Button
        android:id="@+id/Roll_Die_Button"
        android:layout_width="325dp"
        android:layout_height="83dp"
        android:backgroundTint="#DCE2C8"
        android:onClick="rollDieAnimation"
        android:text="@string/roll_die"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RoundPoints"
        app:layout_constraintVertical_bias="0.871" />

    <Button
        android:id="@+id/End_Turn"
        android:layout_width="325dp"
        android:layout_height="83dp"
        android:backgroundTint="#DCE2C8"
        android:onClick="endTurn"
        android:text="@string/end_turn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.766" />

    <TextView
        android:id="@+id/alert_screen"
        android:layout_width="148dp"
        android:layout_height="129dp"
        android:background="#DCE2C8"
        android:text="@string/placeholder"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34" />

    <ImageView
        android:id="@+id/diceImg"
        android:layout_width="182dp"
        android:layout_height="133dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581"
        app:srcCompat="@drawable/dice_5" />

    <TextView
        android:id="@+id/playerGamesWon"
        android:layout_width="96dp"
        android:layout_height="148dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/computer_games_won"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.343" />

    <TextView
        android:id="@+id/computerGamesWon"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_width="96dp"
        android:layout_height="148dp"
        android:textColor="@color/black"
        android:text="@string/player_games_won"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.343" />
</androidx.constraintlayout.widget.ConstraintLayout>